--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "1.x",
     "orchestrate": "0.0.9",
     "logfmt": "1.x",
+    "nedb": "0.10.5",
     "sorted-object-array": "1.0.0"
   }
 }
