Filter stuff in memory for speed, resilience and profit

--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
   "dependencies": {
     "express": "4.x",
     "body-parser": "1.x",
-    "orchestrate": "0.0.9",
     "logfmt": "1.x",
-    "nedb": "0.10.5",
-    "sorted-object-array": "1.0.0"
+    "nedb": "0.10.5"
   }
 }
