Enable "npm start"

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "description": "aula",
   "version": "0.0.1",
   "private": true,
+  "scripts": {
+    "start": "node app.js"
+  },
   "engines": {
     "node": "0.10.x"
   },
