--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "1.x",
     "logfmt": "1.x",
     "nedb": "0.10.5",
-    "underscore": "1.6.0"
+    "underscore": "1.6.0",
+    "rss": "1.1.x"
   }
 }
